# Cplus

./: README.md
pcx_to_rgb_palette_idxs/: CMakeLists.txt  Readme.txt
pcx_to_rgb_palette_idxs/resources/: test_256_128_128_ff0000.pcx
pcx_to_rgb_palette_idxs/src/: Pcx_file_RGB_palette_idxs_seq_br_test.sln  Pcx_file_RGB_palette_idxs_seq_br_test.vcxproj  Pcx_file_RGB_palette_idxs_seq_br_test.vcxproj.filters
pcx_to_rgb_palette_idxs/src/layer0/: Errors_env.cpp  Errors_env.h  IBlock_access.h  Log.cpp  Log.h  Test.h  Types.h  Util.cpp  Util.h
pcx_to_rgb_palette_idxs/src/layer1/: File_seq_block_r.cpp  File_seq_block_r.h  ISeq_block_reader.h  Pcx_header_r.cpp  Pcx_header_r.h  Seq_block.h
pcx_to_rgb_palette_idxs/src/layer2/: IRGB_palette_idxs_seq_block_r.h  Pcx_file_RGB_palette_idxs_seq_br.cpp  Pcx_file_RGB_palette_idxs_seq_br.h  Seq_palette_RGB_idx_block.h
pcx_to_rgb_palette_idxs/src/tests/: Pcx_file_RGB_palette_idxs_seq_br_test.cpp  file_seq_block_r_test.cpp
